--- a/otherexperience.html
+++ b/otherexperience.html
@@ -68,10 +68,10 @@
                             <a href="https://en.wikipedia.org/wiki/Hyperloop" target="_blank">Hyperloop</a>
                         
                         <ul>
-                            <li>Announced in 2013 as a vacuum train from L.A. to San Francisco</li>
-                            <li>Estimated cost of 6 billion dollars</li>
+                            <li>Announced in 2013 as a vacuum train from L.A. to San Francisco.</li>
+                            <li>Estimated cost of 6 billion dollars.</li>
                             <li>Birthed the 
-                             <a href="https://en.wikipedia.org/wiki/Hyperloop_pod_competition" target="_blank">Hyperloop Pod Competition</a>
+                             <a href="https://en.wikipedia.org/wiki/Hyperloop_pod_competition" target="_blank">Hyperloop Pod Competition.</a>
                             </li>
                         </ul>
                         </li>
@@ -81,10 +81,10 @@
                         <li>
                             <a href="https://en.wikipedia.org/wiki/The_Joe_Rogan_Experience" target="_blank">Joe Rogan Podcast</a>
                         <ul>
-                            <li>Two hour appearance that ended with a drop in Tesla stock price</li>
-                            <li>Confirmed departure of Tesla's vice president of worldwide finance</li>
+                            <li>Two hour appearance that ended with a drop in Tesla stock price.</li>
+                            <li>Confirmed departure of Tesla's vice president of worldwide finance.</li>
                             <li> With a follow up interview on 
-                                <a href="https://en.wikipedia.org/wiki/60_Minutes" target="_blank">60 minutes</a> 
+                                <a href="https://en.wikipedia.org/wiki/60_Minutes" target="_blank">60 minutes.</a> 
                             confirmed that Elon does not smoke pot.
                             </li>
                         </ul>
@@ -95,8 +95,8 @@
                         <li>
                             <p class="liUnderline">Music Career</p>
                         <ul>
-                            <li><p class="songTitle">RIP Harambe</p> released in 2019</li>
-                            <li><p class="songTitle">Don't Doubt Ur Vibe</p> released in 2020</li>
+                            <li><p class="songTitle">RIP Harambe</p> released in 2019.</li>
+                            <li><p class="songTitle">Don't Doubt Ur Vibe</p> released in 2020.</li>
                         </ul>
                         </li>
                     </ul>
